--- a/package.json
+++ b/package.json
@@ -1,26 +1,18 @@
 {
   "name": "react-todo",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
-    "bulma": "^0.8.0",
-    "flux": "^3.1.3",
-    "immutable": "^4.0.0-rc.12",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1"
+    "bulma": "^0.9.4",
+    "flux": "^4.0.3",
+    "immutable": "^4.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "build": "react-scripts build"
   },
   "browserslist": {
     "production": [
